syntax = "proto3";
option go_package = ".;protos";
package protos;

import "user_message.proto";
import "validate/validate.proto";

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  UserMessage user = 3;
}